fixed picture from stretching on phones

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -10,13 +10,17 @@
  .col-md-3 {
      width: 20%;
  }
+@media (min-width: 540px) {
+  #profile {
 
+  }
+}
  .fa-stack-2x  {
    font-size: 20px
  }
  #profile {
     /*width: 400px;*/
-    height: 500px;
+    max-height: 500px;
     border: 5px solid black;
     border-radius: 50%;
     margin: 0 auto;
